// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer should add element [elm4] 1`] = `
Object {
  "array": Array [
    Object {
      "code": "elm2",
      "infos": "elm2",
      "some": "other",
    },
    Object {
      "code": "elm1",
      "infos": "elm1",
      "some": "other",
    },
    Object {
      "code": "elm3",
      "infos": "elm3",
      "some": "other",
    },
    Object {
      "code": "elm4",
      "infos": "elm4",
      "some": "other",
    },
  ],
  "data": Object {
    "elm1": Object {
      "code": "elm1",
      "infos": "elm1",
      "some": "other",
    },
    "elm2": Object {
      "code": "elm2",
      "infos": "elm2",
      "some": "other",
    },
    "elm3": Object {
      "code": "elm3",
      "infos": "elm3",
      "some": "other",
    },
    "elm4": Object {
      "code": "elm4",
      "infos": "elm4",
      "some": "other",
    },
  },
  "initialized": true,
  "keys": Array [
    "elm2",
    "elm1",
    "elm3",
    "elm4",
  ],
}
`;

exports[`reducer should add element [elm4] on initial store 1`] = `
Object {
  "array": Array [
    Object {
      "code": "elm4",
      "infos": "elm4",
      "some": "other",
    },
  ],
  "data": Object {
    "elm4": Object {
      "code": "elm4",
      "infos": "elm4",
      "some": "other",
    },
  },
  "initialized": true,
  "keys": Array [
    "elm4",
  ],
}
`;

exports[`reducer should initialize 1`] = `
Object {
  "array": Array [],
  "data": Object {},
  "initialized": false,
  "keys": Array [],
}
`;

exports[`reducer should remove element [elm1] 1`] = `
Object {
  "array": Array [
    Object {
      "code": "elm2",
      "infos": "elm2",
      "some": "other",
    },
    Object {
      "code": "elm3",
      "infos": "elm3",
      "some": "other",
    },
  ],
  "data": Object {
    "elm2": Object {
      "code": "elm2",
      "infos": "elm2",
      "some": "other",
    },
    "elm3": Object {
      "code": "elm3",
      "infos": "elm3",
      "some": "other",
    },
  },
  "initialized": false,
  "keys": Array [
    "elm2",
    "elm3",
  ],
}
`;

exports[`reducer should reset state 1`] = `
Object {
  "array": Array [],
  "data": Object {},
  "initialized": false,
  "keys": Array [],
}
`;

exports[`reducer should set elements [elm1,elm2] 1`] = `
Object {
  "array": Array [
    Object {
      "code": "elm1",
      "infos": "elm1",
      "some": "other",
    },
    Object {
      "code": "elm2",
      "infos": "elm2",
      "some": "other",
    },
  ],
  "data": Object {
    "elm1": Object {
      "code": "elm1",
      "infos": "elm1",
      "some": "other",
    },
    "elm2": Object {
      "code": "elm2",
      "infos": "elm2",
      "some": "other",
    },
  },
  "initialized": true,
  "keys": Array [
    "elm1",
    "elm2",
  ],
}
`;
